[tool.poetry]
name = "cloud"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
# arn:aws:lambda:ap-northeast-1:017000801446:layer:AWSLambdaPowertoolsPythonV2-Arm64:43
aws-lambda-powertools = {version = "2.24.0", extras = ["all"]}
boto3 = "1.27.1"
botocore = "1.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
